--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">POWER BI DASHBOARDS</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/power bi logo.png" alt="" /></span>
 								<p>I Have built this Power BI portfolio to showcase my skills in creating visually compelling dashboards that could help generate business insights, such as KPIs tracking, profit, and loss analysis and Revenue trends,
 									 the Executive Summary dashboard offers a comprehensive overview of the company's performance using various visualization charts and tables in Power BI. Leveraging the Adventure Works dataset, 
 									I meticulously designed the dashboard to provide actionable insights for both internal stakeholders and external clients.</p>
