--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>YEMISI OWOADE</h1>
+								<h1>YEMISI OWOADE <p> <a href="https://badges.iiba.org/22bfda97-ba1e-434c-9ebb-23f73399a9d6?record_view=true">MEMBER IIBA</a> </p> </h1>
+
 								<p>BUSINESS ANALYST | DATA ANALYST | SALES OPERATIONS ANALYST | MARKETING ANALYST <br />
 								<p>THIS PAGE IS STILL A WORK IN PROGRESS, I WILL BE UPDATING WITH MORE PROJECTS SHORTLY <br />
 								 <a href="https://www.linkedin.com/in/oluwayemisi-owoade/">linkedin</a> You can view some of my projects below.</p>
